--- a/static/html/index.html
+++ b/static/html/index.html
@@ -98,14 +98,14 @@
           id="image-render-before"
           height="300"
           width="400"
-          src="../preview.png"
+          src="../images/preview.png"
         />
         <p>After FACE RECOG</p>
         <img
           id="image-render-after"
           height="300"
           width="400"
-          src="../preview.png"
+          src="../images/preview.png"
         />
  
       </div>
