--- a/static/html/index.html
+++ b/static/html/index.html
@@ -33,7 +33,7 @@
   </head>
 
   <body>
-    <script src="../js/index.js"></script>
+  
 
     <div class="heading">&nbsp;
         <div class="aws">Poor Man's Rekognition</div>
@@ -115,6 +115,7 @@
       <p>Under construciton</p>
     </div>
     </div>
-
+<script src="../../jquery.js"></script>
+<script src="../js/index.js"></script>
   </body>
 </html>
